added notes for the java